GTNPORTAL-3177: fix the portal edit handler when on small screened devices.

--- a/mobile-integration/skin/src/main/webapp/skin/ResponsiveSkin/portal/webui/component/EditInline/EditInline.css
+++ b/mobile-integration/skin/src/main/webapp/skin/ResponsiveSkin/portal/webui/component/EditInline/EditInline.css
@@ -57,9 +57,11 @@
    width: auto;
 }
 
-.UIWizard .UIInfoBar .BlueRoundedStyle {
+.UIInfoBar .BlueRoundedStyle {
    background: #e4e4e7;
    height: auto;
+   max-width: 100%;
+   white-space: normal;
 }
 
 .WizardDecorator .LAYOUT-PORTLET,
